traversal.snake.Snake.scala.error
Compilation error:
Snake:37: error: not found: value Direcion
  if(getDirection == Direcion.EST){
                     ^